# MITO

./: README.md  buffer.h  flush_cache.sh
data/: binary_generator.cpp
src/: CMakeLists.txt  buffer.cpp  chunk.h  cmake_install.cmake  libmito.cpp  libmito.h  main.cpp  makefile  routine.cpp  test_script.sh
